--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Boolenear</title>
+    <link rel="stylesheet" href="css/style-1.css">
 </head>
 <body>
     <!--Sfondo e logo Boolenears-->
     <header>
-
+        <img id="logo" src="img/logo.svg" alt="">
     </header>
     <!--/Sfondo e logo Boolenears-->
 
