Titolo Autore Data

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <!--Articolo principale-->
     <main>
     <article>
+        <!--Titolo Autore Data-->
+        <div class="titolone">
+        Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners Lee
+        </div>
+        <div class="nota1">Scritto da <span id="autore"> The Boolenear</span></div>
+        <div class="data">il 10/10/2020</div>
+        <!--/Titolo Autore Data-->
 
         <!--Prima sezione Foto-->
         <section>
