Prima sezione foto

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
         <!--Prima sezione Foto-->
         <section>
- 
+            <img src="img/tim-1.jpg" alt="Tim al leggio">
+            <img src="img/tim-2.jpg" alt="Tim in chiesa">
+            <div class="nota2">1st Photo: John S. and James L. Knight Foundation, by Scott Henriksen</div>
+            <div class="nota3">2nd Photo: Wikimedia, by Paul Clarke</div>
         </section>
         <!--/Prima sezione Foto-->
 
