Seconda sezione Paragrafo puntato

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 
         <!--Seconda sezione Paragrafo puntato-->
         <section>
- 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt corrupti optio. Ducimus aut tempore incidunt voluptatem deleniti provident, quia quisquam, quod odio doloribus asperiores ab! Deserunt laudantium quis est.</p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quaerat consequatur esse eos? Sed fuga, unde facilis illum accusamus dolor! Possimus sequi nobis est doloribus non quia ad, quis omnis?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quaerat consequatur esse eos? Sed fuga, unde facilis illum accusamus dolor! Possimus sequi nobis est doloribus non quia ad, quis omnis?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quaerat consequatur esse eos? Sed fuga, unde facilis illum accusamus dolor! Possimus sequi nobis est doloribus non quia ad, quis omnis?</li>
+            </ul>
         </section>
         <!--/Seconda sezione Paragrafo puntato-->
 
