Terza sezione Tabella

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!--Seconda sezione Paragrafo puntato-->
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt corrupti optio. Ducimus aut tempore incidunt voluptatem deleniti provident, quia quisquam, quod odio doloribus asperiores ab! Deserunt laudantium quis est.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt corrupti optio. <mark>Ducimus aut tempore incidunt voluptatem deleniti provident</mark>, quia quisquam, quod odio doloribus asperiores ab! Deserunt laudantium quis est.</p>
             <ul>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quaerat consequatur esse eos? Sed fuga, unde facilis illum accusamus dolor! Possimus sequi nobis est doloribus non quia ad, quis omnis?</li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quaerat consequatur esse eos? Sed fuga, unde facilis illum accusamus dolor! Possimus sequi nobis est doloribus non quia ad, quis omnis?</li>
@@ -48,6 +48,34 @@
                 
         <!--Terza sezione Tabella-->
         <section>
+            <table>
+                <thead>
+                    <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    <td id="riga-colore1">Lorem ipsum dolor</td>
+                    <td id="riga-colore1">Lorem ipsum dolor</td>
+                    <td id="riga-colore1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quas dolores aliquam dolorum, molestiae, expedita magni voluptas asperiores officia doloremque, facilis reprehenderit soluta in. Eaque quisquam impedit vero odio alias?</trd>
+                    </tr>
+                    <tr>
+                    <td id="riga-colore2">Lorem ipsum dolor</td>
+                    <td id="riga-colore2">Lorem ipsum dolor</td>
+                    <td id="riga-colore2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quas dolores aliquam dolorum, molestiae, expedita magni voluptas asperiores officia doloremque, facilis reprehenderit soluta in. Eaque quisquam impedit vero odio alias?</trd>
+                    </tr>
+                    <tr>
+                    <td id="riga-colore1">Lorem ipsum dolor</td>
+                    <td id="riga-colore1">Lorem ipsum dolor</td>
+                    <td id="riga-colore1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quas dolores aliquam dolorum, molestiae, expedita magni voluptas asperiores officia doloremque, facilis reprehenderit soluta in. Eaque quisquam impedit vero odio alias?</trd>
+                    </tr>
+                </tbody>
+                <thead><!--vuoto-->
+                </thead>
+            </table>
  
         </section>
         <!--/Terza sezione Tabella-->
