Quarta sezione Paragrafo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 
         <!--Quarta sezione Paragrafo-->
         <section>
- 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium soluta, <mark>quibusdam optio minima eum explicabo molestias debitis earum quod</mark>, alias aliquid suscipit nostrum excepturi vel aut possimus temporibus. Autem, saepe.
+            <span id="highlight">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Et velit fuga repellendus quos, neque tempore fugit vero tempora maiores pariatur ut distinctio iure a aut, consequuntur natus voluptates corrupti repellat?</p>
         </section>
         <!--/Quarta sezione Paragrafo-->
 
