Pie di pagina Interesse

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         </section>
         <!--/Seconda sezione Paragrafo puntato-->
 
-                
         <!--Terza sezione Tabella-->
         <section>
             <table>
@@ -89,13 +88,20 @@
 
         <!--Pie di pagina Interesse-->
         <footer>
-            
-        </footer>
+            <div class="interesse">Potrebbero interessarti</div>
+            <div class="testo-foto1">
+                <img src="img/monitor.jpg" alt="schermo">
+                <h3 class="testo1">Lorem ipsum dolor</h3>
+            </div>
+            <div class="testo-foto2">
+                <img src="img/graph.jpg" alt="schermo">
+                <h3 class="testo2">Lorem ipsum dolor</h3>
+            </div>
+    </footer>
         <!--Pie di pagina Interesse-->
 
     </article>
     </main>
     <!--/Articolo principale-->
-
 </body>
 </html>
